Integrate opt-in Bookworm ELF Depends into package builds
